<resources>

    <string name="app_name">交通标志识别助手</string>
    <string name="email">邮箱</string>
    <string name="email_validCode">邮箱验证码</string>
    <string name="send">发送</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="return_login">返回登录</string>
    <string name="code_hint">验证码</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="hint_sign_up">没有账号？点击下方注册</string>
    <string name="sign_up">注册</string>
    <string name="password_rule">密码至少六位，必须且只包含大小写字母以及数字</string>
    <string name="action_settings">设置</string>
    <string name="resetPassword">重置密码</string>
    <string name="result_broadcast">语音播报实时识别结果</string>
    <string name="night_mode">夜间模式跟随系统</string>
    <string name="font">字体大小[重启后生效]</string>
    <string name="font_preview">字体大小预览</string>
    <string name="theme">主题颜色</string>
    <string name="updatePassword">修改密码</string>
    <string name="oldPassword">原密码:</string>
    <string name="oldPassword_error">输入的原密码有误，请重新输入</string>
    <string name="newPassword">新密码:</string>
    <string name="newPassword_confirm">确认密码:</string>
    <string name="password_different2">两次输入的密码不一致，请重新输入</string>
    <string name="password_different">两次输入的新密码不一致，请重新输入</string>
    <string name="confirm_update">确认修改</string>
    <string name="select_resource">请选择识别来源</string>
    <string name="select_image">选择图片文件</string>
    <string name="select_video">选择视频文件</string>
    <string name="open_camera">开启摄像头</string>
    <string name="colum1">序号</string>
    <string name="colum2">识别结果</string>
    <string name="Prohibition_Signs">禁令标志</string>
    <string name="Instruction_Signs">指示标志</string>
    <string name="Warning_Signs">警告标志</string>
    <string name="change_headerImage">换头像</string>
    <string name="username">用户名</string>
    <string name="updatePassword2">密码修改</string>
    <string name="save">保存</string>
    <string name="_20km_h">限速20km/h</string>
    <string name="menu_home">首页</string>
    <string name="menu_gallery">交通标志大全</string>
    <string name="menu_slideshow">我的</string>
    <string name="exit">退出登录</string>
</resources>