<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!--邮箱-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="96dp">

        <EditText
            android:id="@+id/et_email2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/email"
            android:textSize="@dimen/common_font_size"
            android:inputType="textEmailAddress"
            tools:ignore="TextFields" />

        <Spinner
            android:id="@+id/spinner_email_provider2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <!--密码 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="@dimen/common_font_size"
            android:inputType="textPassword" />
    </LinearLayout>

    <!-- 验证码 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <EditText
                android:id="@+id/et_validCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="5"
                android:hint="@string/code_hint"
                android:textSize="@dimen/common_font_size" />

            <ImageView
                android:id="@+id/iv_validCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:clickable="true"
                android:onClick="onClick"
                android:contentDescription="@string/code_hint"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/tv_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/forget_password"
            android:layout_marginStart="3dp"
            android:textSize="@dimen/common_font_size" />
    </LinearLayout>




    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/login"
        android:textSize="@dimen/common_font_size" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/hint_sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/alert_size" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/sign_up"
        android:textSize="@dimen/common_font_size" />

</LinearLayout>
