<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <!-- Email Input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="96dp">

        <EditText
            android:id="@+id/et_email3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/email"
            android:textSize="@dimen/common_font_size"
            android:inputType="textEmailAddress"
            tools:ignore="TextFields" />

        <Spinner
            android:id="@+id/spinner_email_provider3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:spinnerMode="dropdown"/>
    </LinearLayout>
    <!-- Email Verification Code -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_email_verification_code2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/email_validCode"
            android:inputType="text"
            android:textSize="@dimen/common_font_size"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/btn_send_code2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textSize="@dimen/common_font_size"
            android:backgroundTint="@color/green" />
    </LinearLayout>
    <!-- 密码 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="@dimen/common_font_size"
            android:inputType="textPassword" />
    </LinearLayout>
    <!-- 密码要求提示 -->
    <LinearLayout
        android:id="@+id/ll_alert_validPassword3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/alert_validPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_rule"
            android:textColor="@color/red"
            android:textSize="@dimen/alert_size" />
    </LinearLayout>
    <!-- 确认密码 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirm"
            android:textSize="@dimen/common_font_size"
            android:inputType="textPassword" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_alert_validPassword4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/alert_validPassword4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_rule"
            android:textColor="@color/red"
            android:textSize="@dimen/alert_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alert_newPassword3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/alert_newPassword4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_different"
            android:textColor="@color/red"
            android:textSize="@dimen/alert_size" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv_returnLogin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/return_login"
            android:layout_marginStart="3dp"
            android:textSize="@dimen/common_font_size" />
    </LinearLayout>




    <Button
        android:id="@+id/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/resetPassword"
        android:textSize="@dimen/common_font_size" />

</LinearLayout>
