<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UpdatePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_back2"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ib_back" />

        <TextView
            android:id="@+id/tv_updatePassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/updatePassword"
            android:textColor="@color/black"
            android:textSize="@dimen/common_font_size" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_oldPassword"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/oldPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/common_font_size" />

            <EditText
                android:id="@+id/et_oldPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edittext_selector"
                android:inputType="textPassword"
                android:textSize="@dimen/common_font_size" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/alert_oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_alert_oldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/oldPassword_error"
                android:textColor="@color/red"
                android:textSize="@dimen/alert_size" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_newPassword"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/newPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/common_font_size" />

            <EditText
                android:id="@+id/et_newPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edittext_selector"
                android:clickable="true"
                android:inputType="textPassword"
                android:textSize="@dimen/common_font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alert_validPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_alert_validPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/password_rule"
                android:textColor="@color/red"
                android:textSize="@dimen/alert_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_confirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/newPassword_confirm"
                android:textColor="@color/black"
                android:textSize="@dimen/common_font_size" />


            <EditText
                android:id="@+id/et_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edittext_selector"
                android:inputType="textPassword"
                android:textSize="@dimen/common_font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alert_validPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_alert_validPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/password_rule"
                android:textColor="@color/red"
                android:textSize="@dimen/alert_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alert_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_alert_newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/password_different"
                android:textColor="@color/red"
                android:textSize="@dimen/alert_size" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="15dp">

        <Button
            android:id="@+id/btn_confirmUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:text="@string/confirm_update"
            android:textColor="@color/black"
            android:textSize="@dimen/common_font_size" />
    </LinearLayout>


</LinearLayout>