<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.slideshow.SlideshowFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_headerImage"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="4"
            android:src="@drawable/headshot"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <TextView
            android:id="@+id/tv_headerImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="16"
            android:gravity="center|right"
            android:text="@string/change_headerImage"
            android:textColor="@color/black"
            android:textSize="@dimen/common_font_size" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/detail" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="8"
            android:gravity="left"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="@dimen/common_font_size" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="16"
            android:background="@color/transparent"
            android:gravity="center|right"
            android:textColor="@color/black"
            android:textSize="@dimen/common_font_size" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="8"
            android:gravity="left"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/common_font_size" />

        <TextView
            android:id="@+id/tv_email2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="16"
            android:background="@color/transparent"
            android:gravity="center|right"
            android:textColor="@color/black"
            android:textSize="@dimen/common_font_size" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/ll_updatePassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_updatePassword2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="17"
            android:gravity="left"
            android:text="@string/updatePassword2"
            android:textColor="@color/black"
            android:textSize="@dimen/common_font_size" />


        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/detail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="@dimen/common_font_size" />

    </LinearLayout>
</LinearLayout>